feat: enhance LockedDoor functionality with interaction and display features